# taurob_mi

./: LICENSE  README.md
status_publisher/src/: experiment_logger.cpp
taurob_erl_description/: CMakeLists.txt  package.xml
taurob_erl_description/launch/: description.launch
taurob_erl_description/urdf/: generic_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  inertia_tensors.urdf.xacro  taurob_chassis.gazebo.xacro.xml  taurob_chassis.urdf.xacro.xml  taurob_chassis_cameras.urdf.xacro.xml  taurob_erl.urdf.xacro
taurob_erl_gazebo/: CMakeLists.txt  package.xml
taurob_erl_gazebo/launch/: gazebo.launch  taurob_playpen.launch
taurob_mi_description/: CMakeLists.txt  package.xml
taurob_mi_description/launch/: tracker_model_rviz.launch  tracker_steer.launch
taurob_mi_description/urdf/: hokuyo_utm30lx.urdf.xacro  inertia_tensors.urdf.xacro  taurob_mi.urdf.xacro  taurob_mi_chassis.gazebo.xacro  taurob_mi_chassis.urdf.xacro  tracker_chassis.gazebo.xacro.xml  tracker_chassis.urdf.xacro.xml  tracker_standalone.urdf.xacro
taurob_mi_gazebo/: CMakeLists.txt  package.xml
taurob_mi_gazebo/launch/: empty_world.launch
taurob_mi_launch/: CMakeLists.txt  package.xml
taurob_mi_launch/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  local_costmap_params_optimal.yaml
taurob_mi_launch/launch/: amcl.launch  arm_gripper_bringup.launch  cv_cam.launch  front_ip_cam.launch  jog.launch  (+19 more)
taurob_mi_teleop/: CMakeLists.txt  package.xml
taurob_mi_teleop/launch/: taurob_mi_teleop.launch
taurob_mi_teleop/src/: taurob_mi_teleop_node.cpp
(+4 files in other folders)
