<?xml version="1.0"?>
<package>
  <name>taurob_mi_teleop</name>
  <version>1.0.0</version>
  <description>The taurob_mi_teleop package takes joystick input from joy node and sends motion commands (such as angular or linear velocity) to taurob robot drivers node. It also controls lights and other things</description>

  <maintainer email="manolis.chiou@gmail.com">Manolis</maintainer>
  <license>BSD</license>


  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>


  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

 
</package>
